--- a/.gitignore
+++ b/.gitignore
@@ -6,16 +6,18 @@
 *~
 *.lo
 *.la
-Makefile
-config.h
-src/Makefile
-/stamp.h1
 .deps
-config.log
-config.status
+/stamp-h1
+/Makefile
+/src/Makefile
+/config.log
+/config.status
+/config.h
 gtest/Makefile
 gtest/build-aux/config.h
 gtest/build-aux/stamp-h1
+gtest/config.log
+gtest/config.status
 gtest/libtool
 gtest/scripts/gtest-config
 gtest/lib
@@ -24,7 +26,6 @@ protobuf.pc
 protobuf-lite.pc
 libtool
 autom4te.cache/
-/stamp-h1
 core
 src/google/protobuf/unittest*pb*
 src/google/protobuf/compiler/cpp/cpp*pb*
@@ -41,4 +42,5 @@ src/testzip.jar
 src/testzip.list
 src/testzip.proto
 src/testzip.zip
+vsprojects/config.h
 java/target/
