--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,8 @@
 *~
 *.lo
 *.la
+*.pyc
+*.egg
 .deps
 /stamp-h1
 /Makefile
@@ -27,6 +29,15 @@ protobuf-lite.pc
 libtool
 autom4te.cache/
 core
+python/build/
+python/google/protobuf/descriptor_pb2.py
+python/google/protobuf/internal/more_extensions_pb2.py
+python/google/protobuf/internal/more_messages_pb2.py
+python/google/protobuf/unittest_import_pb2.py
+python/google/protobuf/unittest_mset_pb2.py
+python/google/protobuf/unittest_no_generic_services_pb2.py
+python/google/protobuf/unittest_pb2.py
+python/protobuf.egg-info/
 src/google/protobuf/unittest*pb*
 src/google/protobuf/compiler/cpp/cpp*pb*
 src/unittest_proto_middleman
