Fix javanano compiler generating uncompileable java code. This happened for enums when java_multiple_files=true.
Change-Id: Ia6fe1a51c6a46eb9a2f29527829794076b165cb7
Signed-off-by: Brian Duff <bduff@google.com>

--- a/java/pom.xml
+++ b/java/pom.xml
@@ -136,6 +136,7 @@
                   <arg value="../src/google/protobuf/unittest_stringutf8_nano.proto" />
                   <arg value="../src/google/protobuf/unittest_recursive_nano.proto" />
                   <arg value="../src/google/protobuf/unittest_import_nano.proto" />
+                  <arg value="../src/google/protobuf/unittest_enum_multiplejava_nano.proto" />
                 </exec>
               </tasks>
               <testSourceRoot>target/generated-test-sources</testSourceRoot>
