Fix vanilla make build.
Nano extension sources were missing.

Change-Id: Ic3278edae2db5e41e5aa2e7d58e0daa8e29f20b7

--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -655,6 +655,7 @@ libprotoc_la_SOURCES = \
   google/protobuf/compiler/javanano/javanano_enum_field.cc   \
   google/protobuf/compiler/javanano/javanano_enum_field.h    \
   google/protobuf/compiler/javanano/javanano_extension.cc    \
+  google/protobuf/compiler/javanano/javanano_extension.h     \
   google/protobuf/compiler/javanano/javanano_field.cc        \
   google/protobuf/compiler/javanano/javanano_field.h         \
   google/protobuf/compiler/javanano/javanano_file.cc         \
