--- a/java/pom.xml
+++ b/java/pom.xml
@@ -145,6 +145,7 @@
                   <arg value="../src/google/protobuf/unittest_multiple_nano.proto" />
                   <arg value="../src/google/protobuf/unittest_multiple_nameclash_nano.proto" />
                   <arg value="../src/google/protobuf/unittest_enum_class_nano.proto" />
+                  <arg value="../src/google/protobuf/unittest_repeated_merge_nano.proto" />
                 </exec>
                 <exec executable="../src/protoc">
                   <arg value="--javanano_out=store_unknown_fields=true:target/generated-test-sources" />
