Modify the gradle file to fit code hierachy with package name
Change-Id: I99adc3c857d7851b8d99e01c75c15e9c42c37eb7

--- a/build.gradle
+++ b/build.gradle
@@ -24,13 +24,15 @@ configurations {
 sourceSets {
     micro {
         java {
-            srcDirs = ['java/src/main/java/com/google/protobuf/micro']
+            srcDirs = ['java/src/main/java/']
+            include("com/google/protobuf/micro/*")
         }
     }
 
     nano {
         java {
-            srcDirs = ['java/src/main/java/com/google/protobuf/nano']
+            srcDirs = ['java/src/main/java/']
+            include("com/google/protobuf/nano/*")
         }
     }
 }
