--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,3 @@
-=======
 /*
  * Copyright (C) 2013 The Android Open Source Project
  *
@@ -25,15 +24,31 @@ configurations {
 sourceSets {
     micro {
         java {
-            srcDirs = ['java/src/main/java/com/google/protobuf/micro']
+            srcDirs = ['java/src/main/java/']
+            include("com/google/protobuf/micro/*")
         }
     }
 
     nano {
         java {
-            srcDirs = ['java/src/main/java/com/google/protobuf/nano']
+            srcDirs = [
+                    'java/src/main/java/',
+                    'java/src/device/main/java/'
+            ]
+            include("com/google/protobuf/nano/**")
         }
     }
+}
+
+if (project == rootProject) {
+    ext.getAndroidPrebuilt = { apiLevel ->
+        files("$rootDir/../../prebuilts/sdk/$apiLevel/android.jar")
+    }
+}
+
+dependencies {
+    compile getAndroidPrebuilt('8')
+    nanoCompile getAndroidPrebuilt('8')
 }
 
 jar {
