Fix gradle builds of libprotobuf-lite.
Change-Id: I23f6ce1245e30624dafa102257e9cb6d6cf38af8
TODO: Move this into AOSP.

--- a/build.gradle
+++ b/build.gradle
@@ -34,25 +34,32 @@ sourceSets {
     lite {
         java {
             srcDirs = ['java/src/main/java/']
-            exclude 'com/google/protobuf/Descriptors.java'
-            exclude 'com/google/protobuf/AbstractMessage.java'
-            exclude 'com/google/protobuf/BlockingRpcChannel.java'
-            exclude 'com/google/protobuf/BlockingService.java'
-            exclude 'com/google/protobuf/DynamicMessage.java'
-            exclude 'com/google/protobuf/ExtensionRegistry.java'
-            exclude 'com/google/protobuf/GeneratedMessage.java'
-            exclude 'com/google/protobuf/Message.java'
-            exclude 'com/google/protobuf/micro/**'
-            exclude 'com/google/protobuf/nano/**'
-            exclude 'com/google/protobuf/ProtocolMessageEnum.java'
-            exclude 'com/google/protobuf/RpcCallback.java'
-            exclude 'com/google/protobuf/RpcChannel.java'
-            exclude 'com/google/protobuf/RpcController.java'
-            exclude 'com/google/protobuf/RpcUtil.java'
-            exclude 'com/google/protobuf/ServiceException.java'
-            exclude 'com/google/protobuf/Service.java'
-            exclude 'com/google/protobuf/TextFormat.java'
-            exclude 'com/google/protobuf/UnknownFieldSet.java'
+            include 'com/google/protobuf/UninitializedMessageException.java'
+            include 'com/google/protobuf/MessageLite.java'
+            include 'com/google/protobuf/InvalidProtocolBufferException.java'
+            include 'com/google/protobuf/CodedOutputStream.java'
+            include 'com/google/protobuf/ByteString.java'
+            include 'com/google/protobuf/CodedInputStream.java'
+            include 'com/google/protobuf/ExtensionRegistryLite.java'
+            include 'com/google/protobuf/AbstractMessageLite.java'
+            include 'com/google/protobuf/AbstractParser.java'
+            include 'com/google/protobuf/FieldSet.java'
+            include 'com/google/protobuf/Internal.java'
+            include 'com/google/protobuf/WireFormat.java'
+            include 'com/google/protobuf/GeneratedMessageLite.java'
+            include 'com/google/protobuf/BoundedByteString.java'
+            include 'com/google/protobuf/LazyField.java'
+            include 'com/google/protobuf/LazyFieldLite.java'
+            include 'com/google/protobuf/LazyStringList.java'
+            include 'com/google/protobuf/LazyStringArrayList.java'
+            include 'com/google/protobuf/UnmodifiableLazyStringList.java'
+            include 'com/google/protobuf/LiteralByteString.java'
+            include 'com/google/protobuf/MessageLiteOrBuilder.java'
+            include 'com/google/protobuf/Parser.java'
+            include 'com/google/protobuf/ProtocolStringList.java'
+            include 'com/google/protobuf/RopeByteString.java'
+            include 'com/google/protobuf/SmallSortedMap.java'
+            include 'com/google/protobuf/Utf8.java'
         }
     }
 
